@@ -755,17 +755,44 @@ NS_EXTERN int Ns_GetAllAddrByHost(Ns_DString *dsPtr, char *host);
 NS_EXTERN int Ns_DriverInit(char *server, char *module, Ns_DriverInitData *init);
 
 /*
+ * dsprintf.c:
+ */
+
+NS_EXTERN char *
+Ns_DStringVPrintf(Ns_DString *dsPtr, CONST char *fmt, va_list ap)
+     NS_GNUC_NONNULL(2);
+
+/*
  * dstring.c:
  */
 
-NS_EXTERN char **Ns_DStringAppendArgv(Ns_DString *dsPtr);
-NS_EXTERN char *Ns_DStringVarAppend(Ns_DString *dsPtr, ...) NS_GNUC_SENTINEL;
-NS_EXTERN char *Ns_DStringExport(Ns_DString *dsPtr);
-NS_EXTERN char *Ns_DStringPrintf(Ns_DString *dsPtr, char *fmt, ...) NS_GNUC_PRINTF(2,3);
-NS_EXTERN char *Ns_DStringVPrintf(Ns_DString *dsPtr, char *fmt, va_list ap);
-NS_EXTERN char *Ns_DStringAppendArg(Ns_DString *dsPtr, char *string);
-NS_EXTERN Ns_DString *Ns_DStringPop(void);
-NS_EXTERN void  Ns_DStringPush(Ns_DString *dsPtr);
+NS_EXTERN char *
+Ns_DStringVarAppend(Ns_DString *dsPtr, ...)
+     NS_GNUC_NONNULL(1) NS_GNUC_SENTINEL;
+
+NS_EXTERN char *
+Ns_DStringExport(Ns_DString *dsPtr)
+     NS_GNUC_NONNULL(1);
+
+NS_EXTERN char *
+Ns_DStringAppendArg(Ns_DString *dsPtr, CONST char *string)
+     NS_GNUC_NONNULL(1) NS_GNUC_NONNULL(2);
+
+NS_EXTERN char *
+Ns_DStringPrintf(Ns_DString *dsPtr, CONST char *fmt, ...)
+     NS_GNUC_NONNULL(1) NS_GNUC_PRINTF(2,3);
+
+NS_EXTERN char **
+Ns_DStringAppendArgv(Ns_DString *dsPtr)
+     NS_GNUC_NONNULL(1);
+
+NS_EXTERN Ns_DString *
+Ns_DStringPop(void)
+     NS_GNUC_DEPRECATED;
+
+NS_EXTERN void
+Ns_DStringPush(Ns_DString *dsPtr)
+     NS_GNUC_DEPRECATED;
 
 /*
  * exec.c:
